<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.redesigb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_like"
        android:name="com.example.redesigb.ui.like.LikeFragment"
        android:label="Like"
        tools:layout="@layout/fragment_like" />
    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.redesigb.ui.post.PostFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.redesigb.ui.profil.ProfilFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profil" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.redesigb.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>
